examples/errors/computeLayer/IncorrectMemberType.bkf
layer foo:
| *_ => []

layer bar: 
| *_ => foo -- layers don't have type sequence!
